--- a/module1-assignment-solution/index.html
+++ b/module1-assignment-solution/index.html
@@ -32,7 +32,7 @@
 					<center>
 						<h1><b>Lunch Checker</b></h1>
 						<div class="form-group">
-							<!-- Check for empty strings enables -->
+							<!-- Check for empty strings enabled. A , , does not add to the count of items. -->
 							<input id="lunch-menu" type="text"
 							placeholder="list comma separated dishes you usually have for lunch"
 							class="form-control" ng-model="lunch" ng-class="textBoxBorder">
